[metadata]
name = usbcamGUI
version = attr: usbcamGUI.__version__
author = git-oawa
author_email = stu123254@gmail.com
keywords = ["usbcam", "webcam", "GUI", "linux", "pyside2", "opencv"]
description = "GUI for usb camera"
long_description = file: README.md

[options]
zip_safe = False
#packages = find;
#python_requires = >= 3.6
setup_requires = setuptools
install_requires =
wheel >= 0.36.0
flask >= 1.0
flask-sqlalchemy >= 2.5.1
flask-bcrypt >= 3.2.0
flask_login >= 0.5.0
flask-wtf >= 0.15.1
sqlalchemy >= 1.4.15
mysqlclient >= 2.0.3
pymysql >= 1.0.2
uptime >= 3.0.1
loguru >= 0.5.3
psutil >= 5.6.2

[options.entry_points]
#console_scripts =
#    usbcamGUI = usbcamGUI.linux.usbcamGUI

[options.packages.find]
where = usbcamGUI
